	_cerebrod_updown_respond_with_updown_nodes): Continued work to
	complete updown server functionality.

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c:
	New files.

	* src/cerebrod/: Globally use cerebrod_err_debug instead of
	err_debug when appropriate.

	* src/libcommon/Makefile.am, src/cerebrod/Makefile.am: Split off
	libcommon libraries into libcommon and libwrappers.
	
2005-03-28  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_evaluate_updown_state): Continued work.
	
2005-03-27  Albert Chu  <chu11@llnl.gov>

	* src/libcerebro/cerebro_marshalling.h,
	src/libcerebro/cerebro_marshalling.c (cerebro_marshall_int8,
	cerebro_marshall_uint8, cerebro_unmarshall_int8,
	cerebro_unmarshall_uint8): New functions.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_evaluate_updown_state,
	_cerebrod_updown_respond_with_node,
	_cerebrod_updown_respond_with_updown_nodes,
	_cerebrod_updown_send_response): New functions.
	
2005-03-26  Albert Chu  <chu11@llnl.gov>

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c (Listen,
	Accept, Select, Poll, wrap_listen, wrap_accept, wrap_select,
	wrap_poll): New macros and functions.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_respond_with_error,
	_cerebrod_updown_request_dump, _cerebrod_updown_receive_request,
	_cerebrod_updown_request_unmarshall,
	_cerebrod_updown_response_marshall): New functions.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_service_connection): Use new functions.
	
	* src/libcerebro/cerebrod_updown_protocol.h: Minor cleanup.

	* src/cerebrod/cerebrod_config.c (cerebrod_config_cleanup): Fix
	dl_handle bug.
	
2005-03-25  Albert Chu  <chu11@llnl.gov>

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c
	(Gethostbyname, Inet_ntop, wrap_gethostbyname, wrap_inet_ntop):
	New macros and functions.

	* src/cerebrod/cerebrod_config_gendersllnl.c
	(gendersllnl_config_load_default): Add altname support.
