@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod.c,v 1.25 2005-03-29 21:30:29 achu Exp $
+ *  $Id: cerebrod.c,v 1.26 2005-03-29 22:22:31 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -163,6 +163,9 @@ main(int argc, char **argv)
       Pthread_attr_destroy(&attr);
     }
 
-  for (;;) {}
+  for (;;) 
+    {
+      pause();
+    }
   return 0;			/* NOT REACHED */
 }
